config/update-k3s.yaml
---
#需先安装gateway-api的crd
# 可以使用: kubectl apply -f https://github.com/rancher/system-upgrade-controller/releases/download/v0.6.2/system-upgrade-controller.yaml
# kubectl apply -f https://github.com/rancher/system-upgrade-controller/releases/download/v0.11.0/system-upgrade-controller.yaml
# kubectl apply -f ../test/update-k3s-2.yaml
# kubectl  get all -n system-upgrade

#kubectl apply -f https://github.com/rancher/system-upgrade-controller/releases/latest/download/system-upgrade-controller.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: system-upgrade
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-upgrade-controller
  namespace: system-upgrade
spec:
  selector:
    matchLabels:
      upgrade.cattle.io/controller: system-upgrade-controller
  template:
    metadata:
      labels:
        upgrade.cattle.io/controller: system-upgrade-controller
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
      containers:
        - env:
            - name: SYSTEM_UPGRADE_CONTROLLER_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.labels['upgrade.cattle.io/controller']
            - name: SYSTEM_UPGRADE_CONTROLLER_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: rancher/system-upgrade-controller:v0.11.0
          imagePullPolicy: IfNotPresent
          name: system-upgrade-controller
          volumeMounts:
            - mountPath: /etc/ssl
              name: etc-ssl
            - mountPath: /etc/pki
              name: etc-pki
            - mountPath: /etc/ca-certificates
              name: etc-ca-certificates
            - mountPath: /tmp
              name: tmp
      serviceAccountName: system-upgrade
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/controlplane
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - effect: NoExecute
          key: node-role.kubernetes.io/etcd
          operator: Exists
      volumes:
        - hostPath:
            path: /etc/ssl
            type: Directory
          name: etc-ssl
        - hostPath:
            path: /etc/pki
            type: DirectoryOrCreate
          name: etc-pki
        - hostPath:
            path: /etc/ca-certificates
            type: DirectoryOrCreate
          name: etc-ca-certificates
        - emptyDir: {}
          name: tmp
