config/ai.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-deploy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ai-container
  template:
    metadata:
      name: ai-deploy
      labels:
        app: ai-container
      annotations:
        changeRollingUpdate: ${K8S_AI}
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          hostPath:
            type: DirectoryOrCreate
            path: /var/www/k8s/data/tmp/ai/data/
      containers:
        - name: ai-container
          image: lss233/kirara-agent-framework:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /app/data/
          resources:
            requests:
              memory: 8Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 1

---
apiVersion: v1
kind: Service
metadata:
  name: ai-svc
spec:
  selector:
    app: ai-container
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 80
      targetPort: 8080
