config/bw.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bw-sts
  labels:
    app: bw
spec:
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bw
  volumeClaimTemplates:
    - metadata:
        name: bw-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 2Gi
  template:
    metadata:
      labels:
        app: bw
    spec:
      priorityClassName: normal-pc
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: bw-server
          image: vaultwarden/server:1.37.0-alpine
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
          resources:
            requests:
              memory: 80Mi
              cpu: 20m
            limits:
              memory: 256Mi
              cpu: 400m
          ports:
            - name: cp
              containerPort: 80
          volumeMounts:
            - name: bw-data
              mountPath: /data
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
            httpGet:
              path: /alive
              scheme: HTTP
              port: cp
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            httpGet:
              path: /alive
              port: cp
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
---
apiVersion: v1
kind: Service
metadata:
  name: bw-svc
  labels:
    app: bw
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: bw
  ports:
    - name: sp
      port: 80
