config/dating.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dating-deploy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dating-container
  template:
    metadata:
      name: dating-deploy
      labels:
        app: dating-container
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: sqlite-data
          hostPath:
            type: DirectoryOrCreate
            path: /var/www/k8s/data/tmp/dating/tmp/
        - name: static
          hostPath:
            type: DirectoryOrCreate
            path: /var/www/k8s/data/tmp/dating/static/
        - name: log
          persistentVolumeClaim:
            claimName: log
        - name: config
          configMap:
            name: dating-config
      containers:
        - name: dating-container
          image: ghcr.io/twbworld/dating:1.3.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: cp
              containerPort: 80
          volumeMounts:
            - name: sqlite-data
              mountPath: /app/tmp/
            - name: static
              mountPath: /app/static/
            - name: config
              mountPath: /volume/config/
            - name: log
              mountPath: /app/log/
              subPathExpr: dating-$(UUID)
          command:
            - /bin/sh
            - -c
            - |
              ./server -c /volume/config/config.yaml
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            httpGet:
              scheme: HTTP
              port: cp
              path: /
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            httpGet:
              scheme: HTTP
              port: cp
              path: /
          resources:
            requests:
              memory: 100Mi
              cpu: 150m
            limits:
              memory: 320Mi
              cpu: 500m

---
apiVersion: v1
kind: Service
metadata:
  name: dating-svc
spec:
  selector:
    app: dating-container
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 80
