config/frp.yaml
# 复用22端口连接ssh: ssh -o 'proxycommand socat - PROXY:1.1.1.1:pve:22,proxyport=1234' root@pve
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frp-deploy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: frp-container
  template:
    metadata:
      name: frp-deploy
      labels:
        app: frp-container
      annotations:
        changeRollingUpdate: ${K8S_FRP}
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: frp
          configMap:
            name: frp
      containers:
        - name: frp-container
          image: snowdreamtech/frps:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: cp
              containerPort: 443
            - name: cp-web
              containerPort: 80
            - name: cp-ssh
              containerPort: 22
            - name: cp-pve
              containerPort: 8006
          volumeMounts:
            - name: frp
              mountPath: /etc/frp/
          readinessProbe:
            tcpSocket:
              port: cp
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: cp
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 500m

---
apiVersion: v1
kind: Service
metadata:
  name: frp-svc
spec:
  selector:
    app: frp-container
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 443
    - name: sp-web
      port: 80
    - name: sp-ssh
      port: 22
    - name: sp-pve
      port: 8006
