config/pan.yaml
# 网盘目录位于: /var/www/k8s/data/tmp/pan

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-deploy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pan-container
  template:
    metadata:
      name: pan-deploy
      labels:
        app: pan-container
      annotations:
        changeRollingUpdate: ${K8S_PAN}
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: pan-data
          hostPath:
            type: DirectoryOrCreate
            path: /var/www/k8s/data/tmp/pan
        - name: cm
          configMap:
            name: pan-nginx-cm
        - name: log
          persistentVolumeClaim:
            claimName: log
      containers:
        - name: pan-container
          image: nginx:1.25
          imagePullPolicy: IfNotPresent
          ports:
            - name: cp
              containerPort: 80
          volumeMounts:
            - name: pan-data
              mountPath:  /var/www/
            - name: cm
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: log
              mountPath: /var/logs/
              subPathExpr: pan-$(UUID)
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            httpGet:
              scheme: HTTP
              port: cp
              path: /favicon.ico
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 1000m

---
apiVersion: v1
kind: Service
metadata:
  name: pan-svc
spec:
  selector:
    app: pan-container
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 80
