config/ql.yaml
# ql repo https://github.com/RayWangQvQ/BiliBiliToolPro.git "bili_task_"
# ql repo https://github.com/zero205/JD_tencent_scf.git "jd_|jx_|getJDCookie" "backUp|icon" "^jd[^_]|USER|sendNotify|sign_graphics_validate|JDJR|JDSign" "main"

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ql-sts
spec:
  serviceName: ql-svc
  replicas: 1
  minReadySeconds: 5
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ql-container
  volumeClaimTemplates:
    - metadata:
        name: ql-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
  template:
    metadata:
      labels:
        app: ql-container
      annotations:
        changeRollingUpdate: ${K8S_QL}
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
        - name: ql-container
          image: whyour/qinglong:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
          ports:
            - name: cp
              containerPort: 5700
            - name: cp-pan
              containerPort: 80
          volumeMounts:
            - name: ql-data
              mountPath: /ql/data
          command:
            - /bin/sh
            - -c
            - |
              [...]
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            exec:
              command: ["curl", "-sf", "http://127.0.0.1:5400/api/health"]
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
            httpGet:
              scheme: HTTP
              port: cp
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 1

---
apiVersion: v1
kind: Service
metadata:
  name: ql-svc
spec:
  selector:
    app: ql-container
  clusterIP: None
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 5700
    - name: sp-pan
      port: 80
