config/trojan-go.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trojan-go-deploy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: trojan-go-container
  template:
    metadata:
      name: trojan-go-deploy
      labels:
        app: trojan-go-container
      annotations:
        changeRollingUpdate: ${K8S_TROJAN_GO}
    spec:
      restartPolicy: Always
      priorityClassName: system-cluster-critical
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cm
          configMap:
            name: trojan-go-cm
        - name: tls
          secret:
            secretName: tls-secret
      containers:
        - name: trojan-go-container
          image: p4gefau1t/trojan-go:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: cp
              containerPort: 443
          volumeMounts:
            - name: cm
              mountPath: /etc/trojan-go/
            - name: tls
              mountPath: /root/cert/
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            tcpSocket:
              port: cp
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 750m

---
apiVersion: v1
kind: Service
metadata:
  name: trojan-go-svc
spec:
  selector:
    app: trojan-go-container
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: sp
      port: 443
