config/xray.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray-deploy
  labels:
    app: xray
spec:
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: xray
  template:
    metadata:
      labels:
        app: xray
    spec:
      priorityClassName: critical-pc
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: xray-cm
        - name: tls
          secret:
            secretName: xray-secret
      containers:
        - name: xray-server
          image: ghcr.io/xtls/xray-core:26.3.27
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 80Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 1000m
          ports:
            - name: cp
              containerPort: 443
            - name: cp-xtls
              containerPort: 80
            - name: cp-xhttp
              containerPort: 8443
            - name: cp-grpc
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/xray/
              readOnly: true
            - name: tls
              mountPath: /etc/cert/
              readOnly: true
          command: ["/usr/local/bin/xray", "-confdir", "/etc/xray/"]
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            tcpSocket:
              port: cp
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            tcpSocket:
              port: cp
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]

---
apiVersion: v1
kind: Service
metadata:
  name: xray-svc
  labels:
    app: xray
  annotations:
    # traefik.io/service.serverstransporttcp: default-proxy-protocol@kubernetescrd
spec:
  selector:
    app: xray
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: sp
      port: 443
    - name: sp-xtls
      port: 80
    - name: sp-xhttp
      port: 8443
    - name: sp-grpc
      port: 8080
