config/route.yaml
#需配置Gateway API CRD(位于config/gateway-api.yaml)才能使用gateway.networking.k8s.io资源
#route使用参考代码: https://github.com/kubernetes-sigs/gateway-api/tree/main/examples
#设置tls的sni规则时发现, 优先级:IngressRoute > Gateway API
#设置http规则时发现, 优先级:Gateway API > IngressRoute
#使用IngressRoute模式同时设置"IngressRouteTCP"的sni规则和"IngressRoute"验证https, 即优先级:IngressRoute > IngressRouteTCP

#traefik中间件(优先使用Gateway API标准设置而不是中间件设置; 如设置filters.type)================begin
--- #拒绝直接IP访问
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: block-ip
spec:
  ipAllowList:
    sourceRange:
      - "127.0.0.1/32" #只允许本地，变相拒绝外部所有直接IP访问

--- #公用规则合并
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: group1
  namespace: default
spec:
  chain:
    middlewares:
      - name: worker-processes
      - name: limit-req
      - name: circuit-breaker
--- #https规则合并
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http
  namespace: default
spec:
  chain:
    middlewares:
      - name: group1
      # - name: http2https
      - name: compress
      - name: add-header
      - name: error-4xx
      - name: error-5xx
--- #并行
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: worker-processes
spec:
  inFlightReq:
    amount: 100
    sourceCriterion:
      ipStrategy:
        depth: 0
--- #限流
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: limit-req
spec:
  rateLimit: # 1s内接收的平均请求数不大于average，高峰最大burst
    average: 20
    burst: 50
--- #熔断
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: circuit-breaker
spec:
  circuitBreaker:
    expression: > #达?%(要有小数点)流量的网络延迟超?秒, 或网络错误率>?%, 或5xx比例>80% 触发
      LatencyAtQuantileMS(90.0) > 5000 ||
      NetworkErrorRatio() > 0.8 ||
      ResponseCodeRatio(500, 600, 0, 600) > 0.8

--- #强制转https(traefik初始配置已设, 这冗余)
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: http2https
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true #?308:307 重定向
--- #gzip压缩
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
spec:
  compress: {}
--- #响应头
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-header
spec:
  headers:
    frameDeny: true #禁止外源iframes,减少点击劫持
    customFrameOptionsValue: SAMEORIGIN #禁止外源iframes,减少点击劫持
    customBrowserXSSValue: "1; mode=block" #禁用旧版XSS过滤器（可能引入漏洞）防XSS攻击
    contentTypeNosniff: true #禁止服务器自动解析资源类型
    stsIncludeSubdomains: true #启用HSTS;要求浏览器总是通过 https
    stsPreload: true #启用HSTS;要求浏览器总是http跳转到https
    stsSeconds: 31536000 # 1年有效期
    customResponseHeaders:
      Wall: "Hi! Welcome!"
      Alt-Svc: 'h3=":443"; h3-29=":443"' #备选服务
      Referrer-Policy: "no-referrer-when-downgrade" # 控制Referer头泄露
--- #错误页
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-4xx
spec:
  errors:
    status:
      - "402-499"
    query: /404.html
    service:
      name: pan-svc
      port: 80
--- #错误页
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-5xx
spec:
  errors:
    status:
      - "500-599"
    query: /50x.html
    service:
      name: pan-svc
      port: 80
--- #TCP中间件
apiVersion: traefik.io/v1alpha1
kind: MiddlewareTCP
metadata:
  name: inflightconn
spec:
  inFlightConn: #并发 TCP 连接
    amount: 200
--- #密码授权验证
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: default
spec:
  basicAuth:
    secret: traefik-dashboard-secret
    removeHeader: true #删除验证头
#================end

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gc
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gtw
spec:
  gatewayClassName: traefik-gc
  # addresses:
  #   - value: "xxx.xxx.xxx.xxx" #绑定ip或网卡
  listeners:
    - name: ssh
      port: 2222
      protocol: TCP
      allowedRoutes:
        kinds:
          - kind: TCPRoute
    - name: sni-frp
      protocol: TLS
      port: 443
      hostname: frp.twbhub.top
      tls:
        mode: Passthrough #透传TLS,用于四层网络SNI分流
    - name: sni-xray
      protocol: TLS
      port: 443
      hostname: "*.404502.xyz"
      tls:
        mode: Passthrough
    - name: sni-xray-target
      protocol: TLS
      port: 443
      hostname: mail.mypeter.net
      tls:
        mode: Passthrough
    - name: web
      protocol: HTTP
      port: 80
    - name: websecure-main
      protocol: HTTPS
      port: 443
      hostname: twbhub.top
      tls:
        mode: Terminate
        options:
          kind: TLSOption
          name: tls-conf
          group: traefik.io
        certificateRefs:
          - name: tls-secret #也可用traefik-TLSStore等方式配置
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: "*.twbhub.top"
      tls:
        mode: Terminate
        options:
          kind: TLSOption
          name: tls-conf
          group: traefik.io
        certificateRefs:
          - name: tls-secret
    - name: xray-main
      protocol: HTTPS
      port: 443
      hostname: 404502.xyz
      tls:
        mode: Terminate
        options:
          kind: TLSOption
          name: tls-conf
          group: traefik.io
        certificateRefs:
          - name: xray-secret
    - name: xray-www
      protocol: HTTPS
      port: 443
      hostname: www.404502.xyz
      tls:
        mode: Terminate
        options:
          kind: TLSOption
          name: tls-conf
          group: traefik.io
        certificateRefs:
          - name: xray-secret

--- #默认流量(未匹配到其他规则时使用)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catch-all-ip
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: web
  rules:
    - backendRefs:
        - name: pan-svc
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: block-ip
--- #xray流量reality
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: xray-target
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: sni-xray-target
  hostnames:
    - mail.mypeter.net
  rules:
    - backendRefs:
        - name: xray-svc
          port: 443
--- #xray流量x
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: xray-x
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: sni-xray
  hostnames:
    - x.404502.xyz
  rules:
    - backendRefs:
        - name: xray-svc
          port: 80
--- #xray流量xr
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: xray-xr
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: sni-xray
  hostnames:
    - xr.404502.xyz
  rules:
    - backendRefs:
        - name: xray-svc
          port: 8443
--- #xray流量xg
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: xray-xg
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: sni-xray
  hostnames:
    - xg.404502.xyz
  rules:
    - backendRefs:
        - name: xray-svc
          port: 8080
--- #xray-主域名
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xray-main
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: xray-main
  hostnames:
    - 404502.xyz
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      backendRefs:
        - name: pan-svc #分配到假页面
          port: 80
--- #xray-www
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xray-main-www
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: xray-www
  hostnames:
    - www.404502.xyz
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      backendRefs:
        - name: pan-svc #分配到假页面
          port: 80
--- #traefik面板
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: websecure
    - name: traefik-gtw
      sectionName: web
  hostnames:
    - admin.twbhub.top
    - admin.cc.cc
  rules:
    - filters:
        - type: ExtensionRef #能设置各种功能,如重定向、流量复制等,不一定要用Traefik中间件
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api@internal
          kind: TraefikService
          weight: 100 #权重设置,可用于灰度发布(金丝雀),一般设定cookie/HTTP头 从而判断是否进灰度
      timeouts:
        request: 60s #总响应超时
        backendRequest: 30s #后端响应超时
--- #网盘
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pan
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: websecure
    - name: traefik-gtw
      sectionName: web
  hostnames:
    - pan.twbhub.top
    - pan.cc.cc
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      backendRefs:
        - name: pan-svc
          port: 80
--- #订阅
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: websecure
  hostnames:
    - www.twbhub.top
    - clash.twbhub.top
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      matches:
        - method: GET #限制请求方法
        - method: POST
      backendRefs:
        - name: proxy-svc
          port: 80
--- #小程序
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dating
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: websecure
  hostnames:
    - dating.twbhub.top
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      matches:
        - method: GET
        - method: POST
      backendRefs:
        - name: dating-svc
          port: 80
--- #Bitwarden
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bw
spec:
  parentRefs:
    - name: traefik-gtw
      sectionName: websecure
  hostnames:
    - bw.twbhub.top
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http
      backendRefs:
        - name: bw-svc
          port: 80
--- #SSH流量
# apiVersion: gateway.networking.k8s.io/v1
# kind: TCPRoute
# metadata:
#   name: frp-ssh
#   annotations:
#     traefik.ingress.kubernetes.io/router.tcp.middlewares: inflightconn@kubernetescrd #因为TCPRoute无法使用traefik中间件,使用在此配置
# spec:
#   parentRefs:
#     - name: traefik-gtw
#       sectionName: ssh
#   rules:
#     - backendRefs:
#         - name: frp-svc
#           port: 22
--- #frp-http流量
# apiVersion: gateway.networking.k8s.io/v1
# kind: TLSRoute
# metadata:
#   name: frp-http
# spec:
#   parentRefs:
#     - name: traefik-gtw
#       sectionName: sni-frp
#   hostnames:
#     - frp.twbhub.top
#   rules:
#     - backendRefs:
#         - name: frp-svc
#           port: 443
--- #青龙面板
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: ql
# spec:
#   parentRefs:
#     - name: traefik-gtw
#       sectionName: websecure
#   hostnames:
#     - ql.twbhub.top
#   rules:
#     - filters:
#         - type: ExtensionRef
#           extensionRef:
#             group: traefik.io
#             kind: Middleware
#             name: http
#       backendRefs:
#         - name: ql-svc
#           port: 80
